# KnowNepal-Bot

./: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml  server.py
know_nepal/: __main__.py
know_nepal/config/: bot.py
know_nepal/core/: bot.py  models.py  tortoise_config.py
know_nepal/core/plugins/: __init__.py  errors.py  github.py
migrations/main/: 1_20221031082439_update.py
